# AudioStreamer

./: README.md
.github/workflows/: android-build.yml
audio_streamer/: CHANGELOG.md  README.md  pubspec.yaml
audio_streamer/android/app/: build.gradle.kts
audio_streamer/android/app/src/main/: AndroidManifest.xml
audio_streamer/android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  UdpReceiver.cpp  UdpReceiver.h
audio_streamer/android/app/src/main/kotlin/com/example/audio_streamer/: MainActivity.kt  NativeAudioEngine.kt  PcmService.kt
audio_streamer/android/app/src/main/res/xml/: network_security_config.xml
audio_streamer/ios/Runner.xcodeproj/: project.pbxproj
audio_streamer/lib/: main.dart
audio_streamer/linux/: CMakeLists.txt
audio_streamer/linux/runner/: my_application.cc
audio_streamer/macos/Runner.xcodeproj/: project.pbxproj
audio_streamer/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
audio_streamer/web/: index.html
audio_streamer/win_server/: AudioStreamer.Server.sln  AudioStreamer.Server.sln.bak  README.md  UpgradeLog.htm
audio_streamer/win_server/AudioStreamer.Server/: AudioStreamer.Server.csproj  Program.cs  UdpSenderService.cs
audio_streamer/win_server/Backup/: AudioStreamer.Server.sln
